--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,20 @@
+# OS generated files #
+######################
 .DS_Store
+.DS_Store?
+._.DS_Store
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+*~
+
+# Doconce Stuff #
+#################
 .ipynb_checkpoints
 
-#word files
+# Word files #
+##############
 *.doc
 *.docx
